--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <small>
           This project was coded by Ashlea Novalis and is open-source coded on
           <a
-            href="https://github.com/alnovalis?tab=repositories"
+            href="https://github.com/alnovalis/weather_app_shecodesplus"
             target="_blank"
           >
             GitHub </a
