--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
                 <li>Wind: <span id="wind"></span> m/h</li>
               </ul>
             </div>
-          </div>
-          <div class="weather-forecast" id="forecast"></div>
+            </div>
+          <div class="weather-forecast" id="forecast">
         </div>
+       
+        </div>
+        </div>
+        <div class="footer"> 
         <small>
           This project was coded by Ashlea Novalis and is open-source coded on
           <a
@@ -82,8 +86,7 @@
             Netlify</a
           >
         </small>
-      </div>
-    </div>
+        </div>
     <script src="src/index.js"></script>
   </body>
 </html>
